# devpiano

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_en.md  RELEASE-NOTES-v0.1.0.md  THIRD-PARTY-NOTICES.md
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
Doc/: CurrentAssessmentAndPlan.md  KeyboardMappingTestCases.md  LegacyCodeNotes.md  MilestoneChecklist.md  NextPhaseTaskChecklist.md  NinjaMigrationGuide.md  OverallGoal.md
Source/: AudioEngine.cpp  AudioEngine.h  MainComponent.cpp  MainComponent.h  SongEngine.cpp  SongEngine.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h
Source/Core/: AppState.h  AppStateBuilder.h  KeyMapTypes.h  MidiTypes.h
Source/Input/: KeyboardMidiMapper.cpp  KeyboardMidiMapper.h
Source/Plugin/: PluginHost.cpp  PluginHost.h
Source/Settings/: SettingsComponent.h  SettingsModel.h  SettingsStore.cpp
Source/UI/: ControlsPanel.cpp  ControlsPanel.h  HeaderPanel.cpp  HeaderPanel.h  HeaderPanelStateBuilder.cpp  KeyboardPanel.cpp  KeyboardPanel.h  PluginPanelStateBuilder.h
docs/: CurrentAssessmentAndPlan.md  KeyboardMappingTestCases.md  LegacyCodeNotes.md  MilestoneChecklist.md  NextPhaseTaskChecklist.md  NinjaMigrationGuide.md  OverallGoal.md  PluginHostLifecycleTestCases.md  README.md  architecture.md  current-iteration.md  dev-workflow-wsl-windows-msvc.md  index.md  legacy-migration.md  quickstart-dev.md  roadmap.md
docs/architecture/: README.md  legacy-migration.md  overview.md
docs/archive/: CurrentAssessmentAndPlan.md  MilestoneChecklist.md  NextPhaseTaskChecklist.md  NinjaMigrationGuide.md  OverallGoal.md  README.md  architecture-optimization-backlog.md  cleanup-external-midi-scope.md  docs-restructure-2026-04.md  phase10-ui-modernization.md  phase2-3-implementation-backlog.md  phase5-architecture-convergence.md  phase6-7-completion-detail.md  phase8-9-completion.md
docs/audit/: README.md  code-quality-audit-2026-07-20.md  code-quality-audit-template.md
docs/decisions/: 0001-wsl-primary-windows-mirror-workflow.md  0002-legacy-code-as-reference-only.md  0003-pluginflowsupport-pure-functions.md  0004-juce-audiodevicemanager-audio-backend.md  0005-vst3-first-plugin-hosting.md  0006-remove-external-midi-support.md  README.md
docs/development/: README.md  agent-collaboration.md  release-workflow.md  troubleshooting.md  wsl-windows-msvc-workflow.md
docs/features/: M6-6e-plugin-offline-rendering.md  M6-recording-playback.md  M7-layout-presets.md  M8-midi-file-and-freepiano-gap.md  README.md  keyboard-mapping.md  layout-presets.md  phase2-keyboard-mapping.md  phase2-plugin-hosting.md  phase3-layout-presets.md  phase3-plugin-offline-rendering.md  phase3-recording-playback.md  phase4-midi-file-import.md  phase6-performance-persistence.md  plugin-hosting.md  plugin-offline-rendering.md  recording-playback.md  runtime-language-switching.md
docs/getting-started/: README.md  current-status.md  overview.md  quickstart.md
docs/guides/: development.md  quickstart.md  release-workflow.md  troubleshooting.md  wsl-windows-msvc-workflow.md
docs/index/: README.md  doc-map.md  glossary.md
docs/issues/: known-issues.md
docs/planning/: README.md  roadmap-extensions.md
docs/reference/: acceptance.md  architecture.md  project-scope.md
docs/roadmap/: README.md  cleanup-external-midi-scope.md  current-iteration.md  roadmap.md
docs/testing/: README.md  acceptance.md  keyboard-mapping.md  known-issues.md  layout-presets.md  midi-file-import.md  phase2-plugin-host-lifecycle.md  phase3-layout-presets.md  phase3-recording-playback.md  phase4-midi-file-import.md  phase6-performance-persistence.md  plugin-host-lifecycle.md  recording-playback.md
freepiano-src/: LICENSE  config.cpp  config.h  display.cpp  export_wav.cpp  gui.cpp  language.h  midi.cpp  synthesizer_vst.cpp
freepiano-src/vst/: vstfxstore.h
locales/: zh-CN.loc
scripts/: build_msvc_from_wsl.sh  build_wsl.sh  configure_wsl.sh  dev.sh  self_check.sh  sync_to_win.sh
source/: Main.cpp  MainComponent.cpp  MainComponent.h
source/Audio/: AudioDeviceDiagnostics.h  AudioEngine.cpp  AudioEngine.h
source/Core/: AppState.h  AppStateBuilder.cpp  AppStateBuilder.h  ChannelMatrix.h  KeyMapTypes.h  KeyboardTypes.h  MidiTypes.h
source/Diagnostics/: DebugLog.cpp  DebugLog.h  DevPianoLogger.cpp  DevPianoLogger.h  Log.h  MidiTrace.cpp  MidiTrace.h
source/Export/: ExportFlowSupport.cpp  ExportFlowSupport.h  WavExportOptions.h  WavExportTask.cpp  WavExportTask.h
source/Input/: KeyboardMidiMapper.cpp  KeyboardMidiMapper.h
source/Layout/: LayoutDirectoryScanner.cpp  LayoutDirectoryScanner.h  LayoutFlowSupport.cpp  LayoutFlowSupport.h  LayoutPreset.cpp  LayoutPreset.h  PerformancePreset.cpp  PerformancePreset.h  PresetFlowSupport.cpp  PresetFlowSupport.h
source/Locale/: LocaleManager.h  zh_CN.loc.h
source/Midi/: ChannelMatrix.h  MidiChannelMapper.cpp  MidiChannelMapper.h  MidiRouter.cpp  MidiRouter.h
source/Plugin/: PluginFlowSupport.cpp  PluginFlowSupport.h  PluginHost.cpp  PluginHost.h  PluginOperationController.cpp  PluginOperationController.h
source/Recording/: MidiFileExporter.cpp  MidiFileExporter.h  MidiFileImporter.cpp  MidiFileImporter.h  PerformanceFile.cpp  PerformanceFile.h  PluginOfflineRenderer.cpp  PluginOfflineRenderer.h  RecordingEngine.cpp  RecordingEngine.h  RecordingFlowSupport.cpp  RecordingFlowSupport.h  RecordingSessionController.cpp  RecordingSessionController.h  WavFileExporter.cpp  WavFileExporter.h
source/Settings/: AppStateBuilder.cpp  AppStateBuilder.h  SettingsComponent.h  SettingsModel.h  SettingsSerialization.cpp  SettingsSerialization.h  SettingsStore.cpp  SettingsStore.h  SettingsWindowManager.cpp  SettingsWindowManager.h
source/UI/: ControlsPanel.cpp  ControlsPanel.h  CustomKeyboard.cpp  CustomKeyboard.h  DevPianoLookAndFeel.cpp  DevPianoLookAndFeel.h  HeaderPanel.cpp  HeaderPanel.h  HeaderPanelStateBuilder.cpp  HeaderPanelStateBuilder.h  PluginPanel.h  (+14 more)
tools/: build-windows.ps1  sync-to-win.ps1
(+27 files in other folders)
